[gd_scene load_steps=5 format=3 uid="uid://bhc3k2wqukwnb"]

[ext_resource type="Script" path="res://Scripts/scp173npc.gd" id="1_jqmc8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0teex"]
albedo_color = Color(0.906841, 0.709313, 0.668698, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_db6h1"]
material = SubResource("StandardMaterial3D_0teex")
height = 3.12

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n0cb2"]
radius = 0.513865
height = 2.94685

[node name="scp173" type="CharacterBody3D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_jqmc8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_db6h1")

[node name="SCP173_Rig" type="Node3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, -1.27495, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.111955, 0)
shape = SubResource("CapsuleShape3D_n0cb2")

[node name="InteractSound" type="AudioStreamPlayer3D" parent="."]
max_distance = 17.15

[node name="DontLookAtMe" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.144103, 0.0960684)
aabb = AABB(-0.52037, -1.44103, -0.52037, 1.04074, 2.88205, 1.04074)

[connection signal="screen_entered" from="DontLookAtMe" to="." method="_on_dont_look_at_me_screen_entered"]
[connection signal="screen_exited" from="DontLookAtMe" to="." method="_on_dont_look_at_me_screen_exited"]
